--- a/public/style.css
+++ b/public/style.css
@@ -14,9 +14,20 @@ body {
   display: none;
 }
 
-#roomCode-input {
-  width: 100px;
-  margin: 0 auto;
+#roomCode {
   text-transform: uppercase;
-  text-align: center;
+}::-webkit-input-placeholder { /* WebKit browsers */
+  text-transform: none;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+  text-transform: none;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+  text-transform: none;
+}
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+  text-transform: none;
+}
+::placeholder { /* Recent browsers */
+  text-transform: none;
 }
